--- a/themes/navy/source/css/_partial/page.styl
+++ b/themes/navy/source/css/_partial/page.styl
@@ -215,7 +215,7 @@ note-warn = hsl(0, 100%, 50%)
       padding: 5px 15px
     tr
       &:nth-child(2n)
-        background: #eee
+        background: #E1E1E1
 
 .article-footer
   clearfix()
