--- a/themes/navy/source/css/_partial/highlight.styl
+++ b/themes/navy/source/css/_partial/highlight.styl
@@ -30,10 +30,13 @@ pre
     padding: 0
 
 .highlight
+  border-left: 5px solid #ccc;
   background: #eee
-  padding: 10px 15px
+  padding: 12px 12px
   color: highlight-foreground
-  overflow: auto
+  overflow: hidden
+  &:hover
+    overflow: auto
   position: relative
   z-index: 100
   margin: 0
