--- a/themes/navy/source/css/_partial/highlight.styl
+++ b/themes/navy/source/css/_partial/highlight.styl
@@ -30,7 +30,7 @@ pre
     padding: 0
 
 .highlight
-  border-left: 5px solid #ccc;
+  border-left: 5px solid #e1e1e1;
   background: #eee
   padding: 12px 12px
   color: highlight-foreground
