--- a/themes/navy/source/css/_partial/highlight.styl
+++ b/themes/navy/source/css/_partial/highlight.styl
@@ -36,7 +36,7 @@ pre
   color: highlight-foreground
   overflow: hidden
   &:hover
-    overflow: auto
+    overflow: auto !important
   position: relative
   z-index: 100
   margin: 0
