--- a/themes/navy/source/css/_customize.styl
+++ b/themes/navy/source/css/_customize.styl
@@ -11,7 +11,7 @@
 
   #main-nav {
     a {
-      .fa {
+      .fa, .fab {
         padding-right: 0.4em;
         font-size: 0.9em;
         opacity: 0.7;
@@ -28,7 +28,7 @@
 
 #mobile-nav {
   a {
-    .fa {
+    .fa, .fab {
       padding-right: 0.4em;
     }
   }
@@ -76,7 +76,7 @@
       color: #666;
       font-weight: 700;
 
-      .fa {
+      .fa, .fab {
         color: #637ABF;
         font-size: 1em;
         margin: 0 0.3em;
@@ -84,14 +84,98 @@
     }
   }
 
-  .sponsors-wrapper-pc, .sponsors-wrapper-mobile {
-    padding: 3.5em 0;
-    background: color-sponsors;
-    display: none;
+  .post_sponsors {
+    padding: 0 0 15px;
+    .sponsors-wrapper-pc, .sponsors-wrapper-mobile {
+      padding: 0 !important;
+      background: transparent !important;
+
+      .inner {
+        padding: 0 !important;
+        .sponsors {
+          width: 100% !important;
+          margin: 0 !important;
+        }
+
+        .sponsor_item {
+          margin: 5px !important;
+          a, img {
+            width: 140px;
+          }
+        }
+        .become-sponsor {
+          padding: 0.5em 0.8em;
+          font-size: 0.68em;
+        }
+        svg {
+          width: 800 !important;
+        }
+      }
+    }
+
+    h1 {
+      margin: 0.6em 0 !important;
+      font-size: 1.2em !important;
+      color: #609AD1 !important;
+      i {
+        color: #f73437;
+        font-size: 0.75em;
+        padding: 0.2em 5px;
+      }
+    }
 
     @media mq-mobile {
       &.sponsors-wrapper-mobile {
         display: block;
+      }
+
+      .sponsor_item {
+        display: block !important;
+        padding: 5px 0 !important;
+      }
+
+      .become-sponsor {
+        display: inline-block;
+      }
+
+      h1 {
+        margin: 0.6em 0 !important;
+      }
+      padding: 0.2em auto;
+    }
+  }
+
+  .sponsors-wrapper-pc, .sponsors-wrapper-mobile {
+    padding: 1.5em 0;
+    background: color-sponsors;
+    display: none;
+
+    .sponsor_item {
+      display: inline-block;
+      margin: 15px 15px;
+      a, img {
+        width: 180px;
+        display: inline-block;
+        vertical-align: middle;
+      }
+    }
+    .become-sponsor {
+      text-decoration: none;
+      font-weight: 700;
+      color: #fb7d00;
+      padding: 0.6em 1em;
+      border-radius: 2em;
+      border: 1px solid #fb7d00;
+    }
+
+    @media mq-mobile {
+      &.sponsors-wrapper-mobile {
+        display: block;
+      }
+
+      .sponsor_item {
+        display: block !important;
+        padding: 20px 0;
       }
       padding: 0.2em auto;
     }
@@ -120,8 +204,8 @@
       }
 
       h1 {
-        margin: 1.5em 0 0.8em;
-        font-size: 2em;
+        margin: 1em 0 0.8em;
+        font-size: 1.8em;
         color: white;
         font-weight: 700;
       }
