Thanks all sponsors

--- a/themes/navy/source/css/_customize.styl
+++ b/themes/navy/source/css/_customize.styl
@@ -111,6 +111,14 @@
           width: 800 !important;
         }
       }
+
+      .backers_link {
+        padding: 0.6em 0;
+        a {
+          text-decoration: none;
+          color: #6C9ACC;
+        }
+      }
     }
 
     h1 {
